# version-script

./: .gitmodules  CMakeLists.txt  README.md  ips.csv  main.cpp  transactions.cpp
